some SSH patches

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -97,9 +97,14 @@
         <section id="projects-section" class="d-none">
             <div class="d-flex justify-content-between align-items-center mb-4">
                 <h2>My Projects</h2>
-                <button class="btn btn-primary" id="create-project-button">
-                    <i class="fas fa-plus"></i> New Project
-                </button>
+                <div>
+                    <button class="btn btn-outline-secondary me-2" id="import-github-button">
+                        <i class="fab fa-github"></i> Import from GitHub
+                    </button>
+                    <button class="btn btn-primary" id="create-project-button">
+                        <i class="fas fa-plus"></i> New Project
+                    </button>
+                </div>
             </div>
             <div class="row" id="projects-container">
                 <!-- Projects will be loaded here -->
